# monero-gui-fork

./: .clang-format  .clang-tidy  CMakeLists.txt  LeftPanel.qml  MiddlePanel.qml  main.qml  vcpkg.json.json
.cache/clangd/index/: AddressBook.cpp.D14B5CBFBFE80819.idx  AddressBook.h.D48851C650FDC995.idx  AddressBookModel.cpp.DA3D1FB4C4A7964D.idx  AddressBookModel.h.A7BAB78DF440D946.idx  CryptonightR_JIT.c.D84CE834C03A483A.idx  CryptonightR_JIT.h.397A81F0E6EC2A1C.idx  CryptonightR_template.h.49F891E124C69F81.idx  DaemonManager.cpp.86F47EF816214E06.idx  DaemonManager.h.BE83D7C2B5FFDBE7.idx  Decoder.cpp.E5B698DBD88A59D8.idx  Decoder.h.66BFB88897A3D598.idx  FutureScheduler.cpp.B3F6576462EF57D8.idx  FutureScheduler.h.187AB447E379CD07.idx  I2PManager.cpp.35BFAD0E19D3E988.idx  I2PManager.h.390630B6474DA322.idx  KeysFiles.cpp.CBF7669A6F9ACC3E.idx  KeysFiles.h.F32E4CC834686E18.idx  Logger.cpp.46D4CB6C3C02AB5D.idx  Logger.h.ED46B45F1A702A3E.idx  MainApp.cpp.7A669527B1DAB525.idx  MainApp.h.6598F3F32CC17150.idx  MoneroSettings.cpp.E571542A3D269ABE.idx  MoneroSettings.h.DE008F7D517FE2FF.idx  NetworkAccessBlockingFactory.h.200189E47AA65437.idx  NetworkType.h.C5B9916342B9D560.idx  P2PoolManager.cpp.2A72A918580A65C1.idx  P2PoolManager.h.FE77613CF870E6EE.idx  PassphraseHelper.cpp.C6387BE8BBCA4367.idx  PassphraseHelper.h.4C03A72F1962491E.idx  PendingTransaction.cpp.2B55B1C7514EECB5.idx  PendingTransaction.h.E05B77029FE68866.idx  QRCodeImageProvider.cpp.41A6D0CFED90DA0B.idx  QRCodeImageProvider.h.07E477A75BB434B9.idx  QrCode.cpp.A44B1617E02207D3.idx  QrCode.hpp.D3759E19115826E8.idx  ScopeGuard.h.4166085F17F799D0.idx  Subaddress.cpp.26AFB7EB5E16F483.idx  Subaddress.h.7218542B234F0663.idx  SubaddressAccount.cpp.87A02D7DD6F8E62F.idx  SubaddressAccount.h.B50A5271434FE3C4.idx  (+751 more)
.cursor/rules/: cpp20-upgrade-guide.mdc  i2p-integration-plan.mdc  qt6-migration-guide.mdc
cmake/: Deploy.cmake
pages/: Transfer.qml
pages/settings/: SettingsNode.qml
src/: CMakeLists.txt  I2PManager.cpp  I2PManager.h
src/daemon/: DaemonManager.cpp  DaemonManager.h
src/libwalletqt/: UnsignedTransaction.cpp  Wallet.cpp  Wallet.h  WalletManager.cpp
src/main/: filter.cpp  main.cpp
src/qt/: MoneroSettings.cpp  network.h  updater.cpp
tests/: CMakeLists.txt
tests/i2pmanager/: fake_i2pd.py  tst_I2PManager.cpp
translations/: CMakeLists.txt
wizard/: WizardSummary.qml  WizardSummaryItem.qml  WizardWalletInput.qml
